# mcp_servers

./: .gitignore  PROJECT_SUMMARY.md  README.md  USAGE_GUIDE.md  fetch_minute_kline.py  mcp_config.json  pyproject.toml  start_kph_market_data_service.py  start_star_stocks_service.py  start_stock_market_service.py
.cursor/skills/mcp-servers/: SKILL.md
.cursor/skills/star-stocks-mcp/: SKILL.md
docs/: kph_market_data_api.md  star_stocks_architecture.md  stock_data_solution_research.md  stock_market_architecture.md
examples/: kph_market_data_client_example.py  kph_market_data_example.py  stock_market_example.py
src/: __init__.py
src/mcp_servers/: __init__.py  base.py
src/mcp_servers/kph_market_data/: __init__.py  client.py  config.py  logger.py  main.py  models.py  service.py  stock_tags.py
src/mcp_servers/star_stocks/: __init__.py  config.py  db.py  helpers.py  main.py  service.py
src/mcp_servers/stock_market/: __init__.py  data_fetcher.py  main.py  server_manager.py  service.py  stock_list.json
tests/: test_data_fetcher.py  test_kph_market_data.py  test_star_stocks_mcp.py  test_stock_market.py  test_tdx_server_strategy.py
